# eDO_boards_firmware

./: README.md
src/modules/edo-gripper/: .directory  .gitignore  CORE_MODULE.json  README.md
src/modules/edo-gripper_bootloader/: .directory  CORE_MODULE.json  README.md
src/modules/edo-joint/: .directory  CORE_MODULE.json  README.md
src/modules/edo-joint_bootloader/: CORE_MODULE.json  README.md
src/modules/udc/: CORE_MODULE.json  README.md
src/modules/usb_bootloader/: CORE_MODULE.json  README.md
src/modules/usb_dfu_bootloader/: .directory  CORE_MODULE.json  README.md
src/modules/usb_dfu_bootloader/target_template/: .directory  CMakeLists.txt  MODULE_TARGET.json  main.cpp
src/params/edo-joint/: default.json
src/params/edo-usb-bridge/: default.json
src/targets/edo-gripper/: CMakeLists.txt  MODULE_TARGET.json  edo-gripper-Debug.launch  edo-gripper-Release.launch  main.cpp
src/targets/edo-gripper_bootloader/: CMakeLists.txt  MODULE_TARGET.json  edo-gripper_bootloader-Debug.launch  edo-gripper_bootloader-Release.launch
src/targets/edo-joint/: CMakeLists.txt  MODULE_TARGET.json  PARAMETERS.default.json  PARAMETERS.json  main.cpp
src/targets/edo-joint_bootloader/: CMakeLists.txt  MODULE_TARGET.json
src/targets/edo-usb-bridge/: CMakeLists.txt  MODULE_TARGET.json  PARAMETERS.json  main.cpp
src/targets/edo_usb_dfu_bootloader/: CMakeLists.txt  MODULE_TARGET.json  main.cpp
src/targets/usb_bootloader/: CMakeLists.txt  MODULE_TARGET.json
src/targets/usb_ros_serial/: CMakeLists.txt  MODULE_TARGET.json  PARAMETERS.default.json  PARAMETERS.json  main.cpp
(+85 files in other folders)
